Issue #107: Adjust z-index of Gin sidebar. Fixes #107.

--- a/styles/components/edit_form.scss
+++ b/styles/components/edit_form.scss
@@ -85,7 +85,7 @@
       }
 
       .layout-region-node-secondary {
-        z-index: 103;
+        z-index: 99;
         width: var(--gin-sidebar-width);
         height: calc(100% - var(--gin-toolbar-y-offset));
         position: fixed;
